<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@id/menu_filter"
        android:icon="@drawable/ic_more_vert_white_24dp"
        android:title="Filter"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@id/how_to_use"
                android:orderInCategory="100"
                android:title="@string/how_to_use"
                app:showAsAction="never" />
            <item
                android:id="@id/delete_all_contacts"
                android:orderInCategory="100"
                android:title="@string/delete_all_contacts"
                app:showAsAction="never" />
            <item
                android:id="@id/action_notes"
                android:orderInCategory="100"
                android:title="@string/note"
                app:showAsAction="never" />
        </menu>
    </item>
</menu>