<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:aapt="http://schemas.android.com/aapt"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/content_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <LinearLayout
            android:id="@+id/lnInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/etOne"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="@string/old_prefix"
                android:selectAllOnFocus="true"
                android:singleLine="true" />
        </LinearLayout>

        <Button
            android:id="@+id/btnSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lnInput"
            android:text="@string/search"
            android:textColor="@color/colorWhite" />

        <LinearLayout
            android:id="@+id/lnTransfer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/btnSearch"
            android:orientation="vertical"
            android:visibility="gone">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <EditText
                android:id="@+id/etTwo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="@string/new_prefix"
                android:selectAllOnFocus="true"
                android:singleLine="true" />

            <Button
                android:id="@+id/btnTransfer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/transfer" />
        </LinearLayout>

        <TextView
            android:id="@+id/tvNodata"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/no_data"
            android:visibility="gone" />

        <ProgressBar
            android:id="@+id/progressbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true" />

        <ScrollView
            android:id="@+id/svIntro"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/btnSearch">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/introduce" />
            </LinearLayout>
        </ScrollView>
    </RelativeLayout>
</RelativeLayout>
